# ffenc

./: CMakeLists.txt  FindFFMPEG.cmake  README.md  ffenc.cpp  ffenc.h
examples/: ffencTest.cpp  helloEncoderFFENC.cpp
